syntax = "proto3";
option csharp_namespace = "CrewService.Presentation";
import "google/api/annotations.proto";
import "Protos/common.proto";
package contacttypes;

service EmailAddressTypeSrvc {
  rpc GetAllAsync(GetAllEmailAddressTypeRequest) returns (GetAllEmailAddressTypeResponse) {
    option (google.api.http) = { get: "/v1/email-address-types" };
  }
  rpc GetAsync(GetEmailAddressTypeRequest) returns (EmailAddressTypeResponse) {
    option (google.api.http) = { get: "/v1/email-address-types/{ctrl_nbr}" };
  }
  rpc CreateAsync(CreateEmailAddressTypeRequest) returns (EmailAddressTypeResponse) {
    option (google.api.http) = { post: "/v1/email-address-types" body: "*" };
  }
  rpc UpdateAsync(UpdateEmailAddressTypeRequest) returns (EmailAddressTypeResponse) {
    option (google.api.http) = { put: "/v1/email-address-types/{ctrl_nbr}" body: "*" };
  }
  rpc DeleteAsync(DeleteEmailAddressTypeRequest) returns (common.DeleteResponse) {
    option (google.api.http) = { delete: "/v1/email-address-types/{ctrl_nbr}" };
  }
}

message GetAllEmailAddressTypeRequest {
  int64 client_ctrl_nbr = 1;
  int32 page_number = 2;
  int32 page_size = 3;
}

message GetAllEmailAddressTypeResponse {
  repeated EmailAddressTypeResponse emaiAddressTypeList = 1;
  int32 total_count = 2;
}

message GetEmailAddressTypeRequest {
  int64 ctrl_nbr = 1;
}

message CreateEmailAddressTypeRequest {
  int64 client_ctrl_nbr = 1;
  string name = 2;
  int32 number = 3;
  bool emergency_type = 4;
}

message UpdateEmailAddressTypeRequest {
  int64 ctrl_nbr = 1;
  string name = 2;
  int32 number = 3;
  bool emergency_type = 4;
}

message DeleteEmailAddressTypeRequest {
  int64 ctrl_nbr = 1;
}

message EmailAddressTypeResponse {
  int64 ctrl_nbr = 1;
  int64 client_ctrl_nbr = 2;
  string name = 3;
  int32 number = 4;
  bool emergency_type = 5;
  bool success = 6;
  repeated string messages = 7;
}